Write heart.csv to data directory to work with in EDA, etc.

--- a/Notebooks/Capstone 2 -- Data Wrangling.ipynb
+++ b/Notebooks/Capstone 2 -- Data Wrangling.ipynb
@@ -1546,7 +1546,25 @@
     "\n",
     "The distributions make sense, there is no missing data, and there are no real outliers.\n",
     "\n",
-    "No changes were made to the raw data file heart.csv."
+    "No changes were made to the raw data file heart.csv, but will save a copy in the working data directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing file.  \"../data\\heart.csv\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "datapath = '../data'\n",
+    "save_file(heart_data, 'heart.csv', datapath)"
    ]
   }
  ],
