Changed the column names to be more meaningful and in mixed case.

--- a/Notebooks/Capstone 2 -- Data Wrangling.ipynb
+++ b/Notebooks/Capstone 2 -- Data Wrangling.ipynb
@@ -1496,48 +1496,96 @@
    "metadata": {},
    "source": [
     "A lot of these variables are ordinal or categorical with only 2 to 5 values.  There is no information from the source on whether the subjects suspected heart disease, so we don't have any real expectations on what we see here.\n",
-    "#### Age\n",
+    "\n",
+    "Let's improve the names to what's in the parentheses on the right.\n",
+    "\n",
+    "#### Age (Age)\n",
     "Mostly in the 35 to 70 age group with a roughly normal or lognormal shape with a peak at 60 and more to the left of the peak than the right.\n",
     "\n",
-    "#### Sex\n",
+    "#### Sex (Sex)\n",
     "Twice as many men as women.  The total of 303 subjects is considerably under 1000, but big enough to be interesting. Heart disease is more prevalent in men and back in the 1980s when this data was collected, cardiac care infamously focused a lot more attention on male patients.\n",
     "\n",
-    "#### (cp) Chest Pain\n",
+    "#### (cp) Chest Pain (ChestPain)\n",
     "If we assume that category 4, Asymptomatic, is mapped to value 0 (as an ordinal variable should be), then most of the subjects are not complaining of frequent pain and atypical angina is the most common pain reported.  Otherwise if category 1, Typical Angina, has been mapped to 0, most of the subjects are complaining of typical angina pain, and very few do not have chest pain.\n",
     "\n",
-    "#### (trestbps) Resting Blood Pressure\n",
+    "#### (trestbps) Resting Blood Pressure (SystolicBP)\n",
     "I've learned something here https://pubmed.ncbi.nlm.nih.gov/12698068/.  The better predictor of heart disease is not the bottom (diastolic or rest phase) number as I've always heard, but the top number (systolic), when the heart is pushing its hardest.  That's why we only have 1 number and it's between 90 and 200 with a normal or lognormal shape and a larger tail to the right.\n",
     "\n",
-    "#### (chol) Cholestorol\n",
+    "#### (chol) Cholestorol (Chol)\n",
     "No LDL or HDL measurements.  They probably were not as common in 1988 as they are now.  Normal distribution around 225 with a tail to the right.\n",
     "\n",
-    "#### (fbs) Fasting Blood Glucose\n",
+    "#### (fbs) Fasting Blood Glucose (Glucose)\n",
     "They did not record the number, just a boolean, whether it's over 120.  Today's standards say normal is below 100, pre-diabetes is 100 to 125 and diabetes is 126 or above.  Looks like about 1/6th or 17% of the participants have diabetes.\n",
     "\n",
-    "#### (restecg) Resting Electrocardiogram\n",
+    "#### (restecg) Resting Electrocardiogram (RestECG)\n",
     "This is an ordinal with 3 values.  Looks like just less than half have normal ECGs. A slightly higher number have ST abnormalities in their ECG and a few have left ventricular hypotrophy.\n",
     "\n",
-    "#### (thalach) Maximum Heart Rate Achieved on Stress Test\n",
+    "#### (thalach) Maximum Heart Rate Achieved on Stress Test (STMaxRate)\n",
     "This numeric variable has a lognormal distribution with a peak around 165.\n",
     "\n",
-    "#### (exang) Exercise-Induced Angina Pain\n",
+    "#### (exang) Exercise-Induced Angina Pain (STPain)\n",
     "One-third reported angina pain from the stress test.  Two-thirds did not.\n",
     "\n",
-    "#### (oldpeak) ST depression induced by exercise relative to rest \n",
+    "#### (oldpeak) ST depression induced by exercise relative to rest  (STWave)\n",
     "This is an odd bird.  The description lists 4 categories for this variable.  They don't even look like they are ordered.  Yet the data are floats with active values in the tenths place and the range goes up to 6.  Not sure what this means, but I'll analyze the data as reported.\n",
     "\n",
-    "#### (slope) Peak Exercise ST Segment Slope\n",
+    "#### (slope) Peak Exercise ST Segment Slope (STSlope)\n",
     "Three arguably ordinal values.  Close to half have a downward slope, a little less are flat and less than 10% have upward slope.\n",
     "\n",
-    "#### (ca) Number of Major Vessels Colored by Fluoroscopy\n",
+    "#### (ca) Number of Major Vessels Colored by Fluoroscopy (NumNarrow)\n",
     "This is an integer variable, not categorical, showing how many cardiac vessels are narrowed enough to show a strong color under fluoroscopy.  Despite the description stating there are 4 integer values, from 0 to 3, the data show a range of 0 to 4.  About 60% show zero vessels narrowed.  20% show 1, 15% show 2, less than 10% 3 and a few cases show 4 vessels narrowed.\n",
     "\n",
-    "#### (thal) Thalium Stress Test?\n",
+    "#### (thal) Thalium Stress Test?  (Defects)\n",
     "Another odd bird, see the discussion above in Column Descriptions.  The Kaggle description stipulates 3 values (3, 6, 7) and the data show 4 values (0, 1, 2, 3).\n",
     "\n",
-    "#### (target)  Angiographic Disease Status\n",
-    "A boolean representing 0. Less than 50% diameter narrowing or 1. More than 50% diameter narrowing, as measured by angiogram.\n",
-    "\n",
+    "#### (target)  Angiographic Disease Status (AngioTgt)\n",
+    "A boolean representing 0. Less than 50% diameter narrowing or 1. More than 50% diameter narrowing, as measured by angiogram."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 303 entries, 0 to 302\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   Age         303 non-null    int64  \n",
+      " 1   Sex         303 non-null    int64  \n",
+      " 2   ChestPain   303 non-null    int64  \n",
+      " 3   SystolicBP  303 non-null    int64  \n",
+      " 4   Chol        303 non-null    int64  \n",
+      " 5   Glucose     303 non-null    int64  \n",
+      " 6   RestECG     303 non-null    int64  \n",
+      " 7   STMaxRate   303 non-null    int64  \n",
+      " 8   STPain      303 non-null    int64  \n",
+      " 9   STWave      303 non-null    float64\n",
+      " 10  STSlope     303 non-null    int64  \n",
+      " 11  NumNarrow   303 non-null    int64  \n",
+      " 12  Defects     303 non-null    int64  \n",
+      " 13  AngioTgt    303 non-null    int64  \n",
+      "dtypes: float64(1), int64(13)\n",
+      "memory usage: 33.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "rename = {'age':'Age', 'sex':'Sex', 'cp':'ChestPain', 'trestbps':'SystolicBP','chol':'Chol', 'fbs':'Glucose', 'restecg':'RestECG',\\\n",
+    "         'thalach':'STMaxRate', 'exang':'STPain', 'oldpeak':'STWave', 'slope':'STSlope', 'ca':'NumNarrow', 'thal':'Defects', 'target':'AngioTgt'}\n",
+    "heart_data.rename(inplace=True, columns=rename)\n",
+    "heart_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 4. Data Selection\n",
     "\n",
     "Further search of the UCI ML Archive and Kaggle shed no light on the discrepancies in some of the variables between the data descriptions and the range of the actual data.  \n",
@@ -1546,18 +1594,21 @@
     "\n",
     "The distributions make sense, there is no missing data, and there are no real outliers.\n",
     "\n",
-    "No changes were made to the raw data file heart.csv, but will save a copy in the working data directory."
+    "Save the data with the new column names."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)y\n",
       "Writing file.  \"../data\\heart.csv\"\n"
      ]
     }
