Modified the Objective statement slightly.

--- a/Notebooks/Capstone 2 -- Data Wrangling.ipynb
+++ b/Notebooks/Capstone 2 -- Data Wrangling.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Objectives\n",
+    "# Objective\n",
     "\n",
     "We are using the UCI Heart Disease Data from Kaggle in the file data/raw/heart.csv\n",
     "\n",
-    "It has 14 columns, 13 potential feature variables and one boolean target variable, so we are doing a classification problem.\n",
+    "It has 14 columns, 13 potential feature variables and 1 boolean target variable, so we are doing a logistical regression or classification problem.\n",
     "In this notebook we will do data wrangling to characterize the data and verify which variables are good to use."
    ]
   },
@@ -25,7 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import pandas, matplotlib.pyplot, and seaborn \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "#import seaborn as sns\n",
@@ -1544,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
