Performed EDA and added its notebook.  Modifed DataWrangling notebook to change NumNarrow to NumColor based on findings and make minor edits.  heart.csv changed to NumColor.

--- a/Notebooks/Capstone 2 -- Data Wrangling.ipynb
+++ b/Notebooks/Capstone 2 -- Data Wrangling.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -305,7 +305,7 @@
        "9   0     2       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
     "4. ST depression may be associated with subendocardial myocardial infarction, hypokalemia, or digitalis toxicity.\n",
     "\n",
     "- slope (Peak Exercise ST segment slope) (0-2) https://pubmed.ncbi.nlm.nih.gov/3739881/   1=Upsloping, 2=Flat, 3=Downsloping.  Do we slide them down 1 from 1-3 to get the 0-2?  http://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/\n",
-    "- ca    (# of major vessels colored by fluoroscopy) (0-3) A vessel that shows up with the dye color is narrowed.\n",
+    "- ca    (# of major vessels colored by fluoroscopy) (0-3) A vessel that shows up with the dye color has good flow.\n",
     "- thal (not explained) (0-7) (3=normal, 6=fixed defect, 7=reversible defect) but range of data is only 0-3.  Not defined what it is. Some modelers of this data claim this is a blood disorder called beta thalassemia, and at least one other calls it the thalium stress test result.  The blood disorder does not match well to this and there are other indications of a stress test involved in this data (oldpeak, slope and thalach).  I will ask in the Kaggle discussion and otherwise just take it at face value.  thal is not explained on the UCI source site, but other thal variables have to do with an exercise stress test, so let's go with that, NOT the thalassemia.\n",
     "\n",
     "-- target (Patient is diagnosed with heart disease) (No=0, Yes=1)"
@@ -1531,11 +1531,11 @@
     "#### (slope) Peak Exercise ST Segment Slope (STSlope)\n",
     "Three arguably ordinal values.  Close to half have a downward slope, a little less are flat and less than 10% have upward slope.\n",
     "\n",
-    "#### (ca) Number of Major Vessels Colored by Fluoroscopy (NumNarrow)\n",
-    "This is an integer variable, not categorical, showing how many cardiac vessels are narrowed enough to show a strong color under fluoroscopy.  Despite the description stating there are 4 integer values, from 0 to 3, the data show a range of 0 to 4.  About 60% show zero vessels narrowed.  20% show 1, 15% show 2, less than 10% 3 and a few cases show 4 vessels narrowed.\n",
+    "#### (ca) Number of Major Vessels Colored by Fluoroscopy (NumColor)\n",
+    "This is an integer variable, not categorical, showing how many cardiac vessels show a strong color under fluoroscopy.  Despite the description stating there are 4 integer values, from 0 to 3, the data show a range of 0 to 4.  About 60% show zero vessels colored.  20% show 1, 15% show 2, less than 10% 3 and a few cases show 4 vessels colored.\n",
     "\n",
-    "#### (thal) Thalium Stress Test?  (Defects)\n",
-    "Another odd bird, see the discussion above in Column Descriptions.  The Kaggle description stipulates 3 values (3, 6, 7) and the data show 4 values (0, 1, 2, 3).\n",
+    "#### (thal) Thalium Stress Test  (Normal, Fixed Defect, or Reversible Defect)\n",
+    "Another odd bird, see the discussion above in Column Descriptions.  The Kaggle description stipulates 3 values (3, 6, 7) and the data show 4 values (0, 1, 2, 3).  Very few zero values, perhaps it is unmeasured or unknown.\n",
     "\n",
     "#### (target)  Angiographic Disease Status (AngioTgt)\n",
     "A boolean representing 0. Less than 50% diameter narrowing or 1. More than 50% diameter narrowing, as measured by angiogram."
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1566,7 @@
       " 8   STPain      303 non-null    int64  \n",
       " 9   STWave      303 non-null    float64\n",
       " 10  STSlope     303 non-null    int64  \n",
-      " 11  NumNarrow   303 non-null    int64  \n",
+      " 11  NumColor    303 non-null    int64  \n",
       " 12  Defects     303 non-null    int64  \n",
       " 13  AngioTgt    303 non-null    int64  \n",
       "dtypes: float64(1), int64(13)\n",
@@ -1576,7 +1576,7 @@
    ],
    "source": [
     "rename = {'age':'Age', 'sex':'Sex', 'cp':'ChestPain', 'trestbps':'SystolicBP','chol':'Chol', 'fbs':'Glucose', 'restecg':'RestECG',\\\n",
-    "         'thalach':'STMaxRate', 'exang':'STPain', 'oldpeak':'STWave', 'slope':'STSlope', 'ca':'NumNarrow', 'thal':'Defects', 'target':'AngioTgt'}\n",
+    "         'thalach':'STMaxRate', 'exang':'STPain', 'oldpeak':'STWave', 'slope':'STSlope', 'ca':'NumColor', 'thal':'Defects', 'target':'AngioTgt'}\n",
     "heart_data.rename(inplace=True, columns=rename)\n",
     "heart_data.info()"
    ]
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
