Improved text of Data Wrangling issues and insights.

--- a/Notebooks/Capstone 2 -- Data Wrangling.ipynb
+++ b/Notebooks/Capstone 2 -- Data Wrangling.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "We are using the UCI Heart Disease Data from Kaggle in the file data/raw/heart.csv\n",
     "\n",
-    "It has 14 columns, 13 potential feature variables and 1 boolean target variable, so we are doing a logistical regression or classification problem.\n",
+    "We will try to predict the indication of heart disease in the target variable.\n",
+    "\n",
+    "It has 14 columns, 13 potential feature variables and 1 boolean target variable, so we are doing a classification problem.\n",
     "In this notebook we will do data wrangling to characterize the data and verify which variables are good to use."
    ]
   },
@@ -331,13 +333,13 @@
     "\n",
     "- age (years)\n",
     "- sex (F=0, M=1)\n",
-    "- cp (Chest Pain Type) (0-3) found at UCI site 1=Typical Angina, 2=Atypical Angina, 3=Non-Anginal Pain, 4= Asymptomatic.\n",
-    "This begs the question \"Is it translated down to the 0-based indexes, or has 4 been converted to 0, like you'd expect for no pain?\"  http://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/\n",
+    "- cp (Chest Pain Type) (Actual values: 0-3) Definition on the UCI site: 1=Typical Angina, 2=Atypical Angina, 3=Non-Anginal Pain, 4= Asymptomatic.   \n",
+    "This raises the question \"Is it translated down to the 0-based indexes, or has 4 been converted to 0, like you'd expect for no pain?\"  http://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/  We will look at the data in context to try to find the answer.\n",
     "- trestbps (Resting blood pressure in mm Hg at admission), doesn't say whether it's diastolic or systolic, but the range is 94 to 200, so it has to be the top/bigger number (systolic, the pressure when the heart is exerting maximum force). https://pubmed.ncbi.nlm.nih.gov/12698068/\n",
     "https://www.healthline.com/health/high-blood-pressure-hypertension/blood-pressure-reading-explained \n",
     "- chol (Serum Cholesterol in mg/dl) https://www.healthline.com/health/serum-cholesterol#results\n",
     "- fbs (Fasting Blood Sugar > 120 mg/dl or not) They just captured this boolean rather than the actual number.  The CDC says that 100-125 is an indication of pre-diabetes and above 125 shows diabetes.  https://www.cdc.gov/diabetes/basics/getting-tested.html\n",
-    "- restecg (Resting Electrocardiographic results)  (0-2) not explained  https://www.nhs.uk/conditions/electrocardiogram/\n",
+    "- restecg (Resting Electrocardiographic results)  (Actual values: 0-2) not explained  https://www.nhs.uk/conditions/electrocardiogram/\n",
     "This time UCI shows the 0-based index values.  0 = Normal, 1 = having ST-T wave abnormality, 2 = showing probable or definite left ventricular hypertrophy by Estes' criteria\n",
     "- thalach (Maximum Heart Rate Achieved) Think this is during a tread-mill exercise test, but it doesn't say.  https://www.cdc.gov/physicalactivity/basics/measuring/heartrate.htm\n",
     "- exang (Exercise induced angina (angina heart pain during tread-mill test)) (No=0, Yes=1)\n",
@@ -345,15 +347,15 @@
     "\n",
     "- oldpeak (ST depression induced by exercise relative to rest)\n",
     "What the heck is ST?   It's a characteristic segment of a person's sinus rhythm as seen on an ECG.  \n",
-    "According to the Interpretation section of https://en.wikipedia.org/wiki/ST_segment, it can indicate several different things regarding the heart:\n",
+    "According to the Interpretation section of https://en.wikipedia.org/wiki/ST_segment, it can indicate several different things regarding the heart: \n",
     "1. The normal ST segment has a slight upward concavity.\n",
     "2. Flat, downsloping, or depressed ST segments may indicate coronary ischemia.\n",
     "3. ST elevation may indicate transmural myocardial infarction. An elevation of >1mm and longer than 80 milliseconds following the J-point. This measure has a false positive rate of 15-20% (which is slightly higher in women than men) and a false negative rate of 20-30%.\n",
     "4. ST depression may be associated with subendocardial myocardial infarction, hypokalemia, or digitalis toxicity.\n",
     "\n",
-    "- slope (Peak Exercise ST segment slope) (0-2) https://pubmed.ncbi.nlm.nih.gov/3739881/   1=Upsloping, 2=Flat, 3=Downsloping.  Do we slide them down 1 from 1-3 to get the 0-2?  http://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/\n",
-    "- ca    (# of major vessels colored by fluoroscopy) (0-3) A vessel that shows up with the dye color has good flow.\n",
-    "- thal (not explained) (0-7) (3=normal, 6=fixed defect, 7=reversible defect) but range of data is only 0-3.  Not defined what it is. Some modelers of this data claim this is a blood disorder called beta thalassemia, and at least one other calls it the thalium stress test result.  The blood disorder does not match well to this and there are other indications of a stress test involved in this data (oldpeak, slope and thalach).  I will ask in the Kaggle discussion and otherwise just take it at face value.  thal is not explained on the UCI source site, but other thal variables have to do with an exercise stress test, so let's go with that, NOT the thalassemia.\n",
+    "- slope (Peak Exercise ST segment slope) (Actual values: 0-2) https://pubmed.ncbi.nlm.nih.gov/3739881/   1=Upsloping, 2=Flat, 3=Downsloping.  As with cp, do we slide them down 1 from 1-3 to get the 0-2?  http://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/\n",
+    "- ca    (# of major vessels colored by fluoroscopy) (Actual values: 0-3) A vessel that shows up with the dye color has good flow.\n",
+    "- thal (not explained) (0-7) (Kaggle says 3=normal, 6=fixed defect, 7=reversible defect) but range of actual data is only 0-3.  Not defined what it is. Some modelers of this data claim this is a blood disorder called beta thalassemia, and at least one other calls it the thalium stress test result.  The blood disorder does not match well to this and there are other indications of a stress test involved in this data (oldpeak, slope and thalach).  I will ask in the Kaggle discussion and otherwise just take it at face value.  thal is not explained on the UCI source site, but other \"thal\" variables have to do with an exercise stress test, so verify the context matches that, NOT the thalassemia.\n",
     "\n",
     "-- target (Patient is diagnosed with heart disease) (No=0, Yes=1)"
    ]
@@ -660,7 +662,7 @@
     "\n",
     "The order of the rows is different, so in Google Sheets I re-ordered them both with age, then chol, then thalach, as those last two columns seem to have the most distinctive values.\n",
     "\n",
-    "As advertised, target now contains values over the full range from 0 to 3, not just 0 and 1, which would make for a more interesting logistical regression or classification problem.\n",
+    "As advertised, target now contains values over the full range from 0 to 3, not just 0 and 1, which would make for a 4-value classification problem.\n",
     "\n",
     "Other columns changed, too.  ca and thal both have some \"?\" entries, rendering them objects in the DF.  I used na_values to make them NaN.  Pandas made them float values, despite them being integers in Google Sheets.  ca has 4 missing values and thal has 2.  \n",
     "\n",
@@ -1589,7 +1591,7 @@
     "\n",
     "Further search of the UCI ML Archive and Kaggle shed no light on the discrepancies in some of the variables between the data descriptions and the range of the actual data.  \n",
     "\n",
-    "One could look into the other 3 data sets (from Long Beach VA, Hungary and Switzerland), but that is beyond the scope of this project.  The dataset is 34 years old, so it seems there's really no choice but to take the original dataset as is.  \n",
+    "One could look for the other 3 data sets (from Long Beach VA, Hungary and Switzerland), but there is no link to them and that is beyond the scope of this project.  The dataset is 34 years old, so it seems there's really no choice but to take the original dataset as is.  \n",
     "\n",
     "The distributions make sense, there is no missing data, and there are no real outliers.\n",
     "\n",
