--- a/Notebooks/Capstone 2 -- Data Wrangling.ipynb
+++ b/Notebooks/Capstone 2 -- Data Wrangling.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "4   1     2       1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
        "4  1.0   3.0       0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1411,7 +1411,7 @@
        "[303 rows x 28 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1615,10 +1615,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fed0e25730>]"
+       "[<matplotlib.lines.Line2D at 0x1fdc7d02b50>]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1668,10 +1668,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fed0e99ee0>]"
+       "[<matplotlib.lines.Line2D at 0x1fdc7d8e6a0>]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1710,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1723,10 +1723,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fecf9af160>]"
+       "[<matplotlib.lines.Line2D at 0x1fdc7e07dc0>]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1766,16 +1766,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fecfa08c40>]"
+       "[<matplotlib.lines.Line2D at 0x1fdc7efaf70>]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1815,16 +1815,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age           int64\n",
+      "Sex           int64\n",
+      "ChestPain     int64\n",
+      "SystolicBP    int64\n",
+      "Chol          int64\n",
+      "Glucose       int64\n",
+      "RestECG       int64\n",
+      "STMaxRate     int64\n",
+      "STPain        int64\n",
+      "STWave        int64\n",
+      "STSlope       int64\n",
+      "NumColor      int64\n",
+      "Defects       int64\n",
+      "AngioTgt      int64\n",
+      "dtype: object\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fece33abb0>]"
+       "[<matplotlib.lines.Line2D at 0x1fdc83c6970>]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1849,6 +1870,11 @@
     "                                     2.6:3, 2.7:3, 2.8:3, 2.9:3, 3.1:3, 3.2:3, 3.3:3, 3.4:3, 3.5:3,\\\n",
     "                                     3.6:4, 3.7:4, 3.8:4, 3.9:4, 4.1:4, 4.2:4, 4.3:4, 4.4:4, 5.6:6, 6.2:6})\n",
     "\n",
+    "## Change type to int also, not just x.0\n",
+    "heart_data = heart_data.astype({'STWave': 'int64'})\n",
+    "      \n",
+    "print(heart_data.dtypes)\n",
+    "\n",
     "heart_data.STWave.hist(bins=6)\n",
     "pctgs = [(i, 100 * round(heart_data[heart_data.STWave == i]['AngioTgt'].mean(), 3)) for i in np.sort(heart_data.STWave)]\n",
     "lst1, lst2 = zip(*pctgs)\n",
@@ -1869,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1882,10 +1908,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fed0f90d00>]"
+       "[<matplotlib.lines.Line2D at 0x1fdc7dd46a0>]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1925,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1938,10 +1964,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fed1019430>]"
+       "[<matplotlib.lines.Line2D at 0x1fdc807f820>]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1986,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1999,10 +2025,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1fecfb27430>]"
+       "[<matplotlib.lines.Line2D at 0x1fdc78ea760>]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2053,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
