Save processed data in CSV files.

--- a/Notebooks/Capstone 2 -- Feature Engineering, Pre-processing and Training Data Development.ipynb
+++ b/Notebooks/Capstone 2 -- Feature Engineering, Pre-processing and Training Data Development.ipynb
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,6 +1403,51 @@
     "XFF_test[['STMaxRate','SystolicBP','Chol']] = teFF\n",
     "\n",
     "print(XFF_train, XFF_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)y\n",
+      "Writing file.  \"../data\\XFF_train.csv\"\n",
+      "Writing file.  \"../data\\XMdf_train.csv\"\n",
+      "Writing file.  \"../data\\Xmf_train.csv\"\n",
+      "Writing file.  \"../data\\XFF_test.csv\"\n",
+      "Writing file.  \"../data\\XMdf_test.csv\"\n",
+      "Writing file.  \"../data\\Xmf_test.csv\"\n",
+      "Writing file.  \"../data\\yFF_train.csv\"\n",
+      "Writing file.  \"../data\\yMdf_train.csv\"\n",
+      "Writing file.  \"../data\\ymf_train.csv\"\n",
+      "Writing file.  \"../data\\yFF_test.csv\"\n",
+      "Writing file.  \"../data\\yMdf_test.csv\"\n",
+      "Writing file.  \"../data\\ymf_test.csv\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "datapath = '../data'\n",
+    "save_file(XFF_train, 'XFF_train.csv', datapath)\n",
+    "save_file(XMdf_train, 'XMdf_train.csv', datapath)\n",
+    "save_file(Xmf_train, 'Xmf_train.csv', datapath)\n",
+    "save_file(XFF_test, 'XFF_test.csv', datapath)\n",
+    "save_file(XMdf_test, 'XMdf_test.csv', datapath)\n",
+    "save_file(Xmf_test, 'Xmf_test.csv', datapath)\n",
+    "save_file(yFF_train, 'yFF_train.csv', datapath)\n",
+    "save_file(yMdf_train, 'yMdf_train.csv', datapath)\n",
+    "save_file(ymf_train, 'ymf_train.csv', datapath)\n",
+    "save_file(yFF_test, 'yFF_test.csv', datapath)\n",
+    "save_file(yMdf_test, 'yMdf_test.csv', datapath)\n",
+    "save_file(ymf_test, 'ymf_test.csv', datapath)"
    ]
   }
  ],
