Added Classification Reports.

--- a/Notebooks/Capstone 2 -- Modeling.ipynb
+++ b/Notebooks/Capstone 2 -- Modeling.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,8 @@
     "from sklearn.ensemble     import RandomForestClassifier\n",
     "from sklearn.neighbors    import KNeighborsClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import r2_score, confusion_matrix\n",
+    "from sklearn.metrics import r2_score, confusion_matrix, classification_report\n",
+    "\n",
     "import seaborn as sns\n",
     "import math\n",
     "\n",
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +195,8 @@
     "    plt.xlabel('Predicted label');\n",
     "    all_sample_title = title + '\\nAccuracy Score: {0}%\\nRsquared = {1}'\\\n",
     "        .format(round(100*score, 1), round(r2_score(y, predictions),3))\n",
-    "    plt.title(all_sample_title, size = 15);"
+    "    plt.title(all_sample_title, size = 15);\n",
+    "    print(classification_report(y, predictions))"
    ]
   },
   {
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +242,16 @@
       " -5.60353377  0.26764692  3.32431525 -2.93387468 -4.88063907 -0.4805176\n",
       " -2.03372267  0.58040569 -0.34285748  1.31803877 -3.90240979 -2.26301702\n",
       "  3.79681105  2.25821297  2.32694948  1.26289507 -1.07867376  2.75622391\n",
-      " -0.66419885]\n"
+      " -0.66419885]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.94      0.88        32\n",
+      "           1       0.92      0.79      0.85        29\n",
+      "\n",
+      "    accuracy                           0.87        61\n",
+      "   macro avg       0.88      0.87      0.87        61\n",
+      "weighted avg       0.87      0.87      0.87        61\n",
+      "\n"
      ]
     },
     {
@@ -271,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +300,16 @@
       " -5.17805316  0.52777301  3.35962703 -2.48027062 -4.65701767 -0.45508275\n",
       " -1.56555927  0.69670947 -0.1029108   1.48875746 -3.7735563  -2.06407995\n",
       "  3.81616762  2.46372172  2.47484858  1.53774295 -0.36753602  2.80873541\n",
-      " -0.5347617 ]\n"
+      " -0.5347617 ]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.91      0.88        32\n",
+      "           1       0.89      0.83      0.86        29\n",
+      "\n",
+      "    accuracy                           0.87        61\n",
+      "   macro avg       0.87      0.87      0.87        61\n",
+      "weighted avg       0.87      0.87      0.87        61\n",
+      "\n"
      ]
     },
     {
@@ -343,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -352,8 +372,26 @@
      "text": [
       "1.0 0.7704918032786885\n",
       "9 46\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.74      0.88      0.80        32\n",
+      "           1       0.83      0.66      0.73        29\n",
+      "\n",
+      "    accuracy                           0.77        61\n",
+      "   macro avg       0.78      0.77      0.77        61\n",
+      "weighted avg       0.78      0.77      0.77        61\n",
+      "\n",
       "1.0 0.819672131147541\n",
-      "9 46\n"
+      "9 46\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.82      0.84      0.83        32\n",
+      "           1       0.82      0.79      0.81        29\n",
+      "\n",
+      "    accuracy                           0.82        61\n",
+      "   macro avg       0.82      0.82      0.82        61\n",
+      "weighted avg       0.82      0.82      0.82        61\n",
+      "\n"
      ]
     },
     {
