Corrected objective wording.

--- a/Notebooks/Capstone 2 -- Modeling.ipynb
+++ b/Notebooks/Capstone 2 -- Modeling.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "In this notebook we will do predictive modeling using the pre-processed data files from the Feature Engineering notebook.\n",
     "\n",
-    "We will build 4 different models: Logistic Regression, Decision Tree, Random Forest and k Nearest Neighbor.\n",
+    "We will build models using 5 algorithms: Logistic Regression, Decision Tree, Random Forest, k Nearest Neighbor, and SVM.\n",
     "\n",
     "\n",
     "# 1. Load the data from the X and y train and test files."
