Feature importance to Models and various edits to the text.

--- a/Notebooks/Capstone 2 -- Data Wrangling.ipynb
+++ b/Notebooks/Capstone 2 -- Data Wrangling.ipynb
@@ -1597,7 +1597,7 @@
     "\n",
     "Actual values:   0, 1, 2, 3\n",
     "\n",
-    "Question to answer:  Is 0 associated with a lower risk of heart disease, and 1-3 with increasing risk?\n"
+    "Question to answer:  Is 0 associated with a lower risk of heart disease, and 1-3 with decreasing risk?\n"
    ]
   },
   {
