--- a/Notebooks/Capstone 2 -- Feature Engineering, Pre-processing and Training Data Development.ipynb
+++ b/Notebooks/Capstone 2 -- Feature Engineering, Pre-processing and Training Data Development.ipynb
@@ -1058,6 +1058,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scaled Feature Set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
