--- a/Notebooks/Capstone 2 -- Modeling.ipynb
+++ b/Notebooks/Capstone 2 -- Modeling.ipynb
@@ -1951,8 +1951,16 @@
     "\n",
     "6. None of the other features really stands out.\n",
     "\n",
-    "7. Scaling of the 4 numeric features (STMaxRate, SystolicBP, Chol and Age) does not affect their ranking much in the two models which we ran with scaled and unscaled data (Logistic and Decision Tree).\n"
+    "7. Scaling of the 4 numeric features (STMaxRate, SystolicBP, Chol and Age) does not affect their ranking much in the two models which we ran with scaled and unscaled data (Logistic and Decision Tree).  However, KNN’s performance did degrade a good deal with unscaled data, when we did that fun for the sake of comparison.\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
